2005-04-10  Hans Breuer  <hans@breuer.org>

	* plug-ins/cairo/diacairo.c : adapt to Cairo PNG API 
	changes (somewhat broken)
	
	* plug-ins/pstricks/render_pstricks.c : still C89 ...
	* objects/custom/shape_info.c : ... but with prototypes
	
2005-04-07  Lars Clausen  <lars@raeder.dk>

	* lib/dia_xml.c: 
	* plug-ins/svg/render_svg.c: 
	* lib/diasvgrenderer.c: Patches from ptasz3k@o2.pl (Radek Krahl):
	Make decimal separators be correct in save file formats
	(non-localized).  Fixes bugs #172529 and 172531.

2005-04-06  Lars Clausen  <lars@raeder.dk>

	* app/create_object.c (create_object_button_release): 
	* app/modify_tool.c (modify_button_release): Correct activations
	of text edits.

2005-04-05  Simon Kågström  <ska@bth.se>

	* app/app_procs.c: the --show-layers option can now handle numeric
	ranges of layers.

2005-04-05  Lars Clausen  <lars@raeder.dk>

	* lib/diagdkrenderer.c (draw_string): Patch from tomkast@yahoo.com
	(Tom Kast): Avoid blockiness caused by bad updates.

2005-04-03  Lars Clausen  <lars@raeder.dk>

	* lib/polyshape.c: 
	* lib/beziershape.c: Main points.  A crude solution, having the
	center in the middle of the bb.  Shows a bug in the distance_from
	code for polyshape when a side is horizontal.

2005-04-02  Lars Clausen  <lars@raeder.dk>

	* plug-ins/pstricks/render_pstricks.c: 
	* plug-ins/xfig/xfig-export.c: Patch from Radek
	Krahl <ptasz3k@o2.pl>: Fix decimal point problems. Fixes bugs 

2005-04-02  Hans Breuer  <hans@breuer.org>

	* lib/dia_image.c(dia_image_filename) : return the path 
	again. (bug #172416, Radek Krahl)
	
2005-04-01  Steve Murphy  <murf@e-tools.com>

	* configure.in: Added "rw" to ALL_LINGUAS.

2005-03-31  Lars Clausen  <lars@raeder.dk>

	* lib/neworth_conn.c (neworthconn_update_data): Handle autogap.

	* lib/orth_conn.c (orthconn_update_data): Handle autogap while not
	autorouting.  

	* objects/network/basestation.c: Main points.

2005-03-27  Hans Breuer  <hans@breuer.org>
